merge-squash br/client-report-package-upgrades

--- a/file-server/Dockerfile
+++ b/file-server/Dockerfile
@@ -48,9 +48,8 @@ RUN npm run build:prod
 
 
 ######################## POLIS CLIENT REPORT ########################
-# Gulp v3 stops us from upgrading beyond Node v11
 # FROM client-base AS client-report
-FROM docker.io/node:11-alpine as client-report
+FROM docker.io/node:18-alpine AS client-report
 
 # Set default NODE_ENV to production unless overridden at build time with --build-arg NODE_ENV=development
 ARG NODE_ENV
